[gd_scene load_steps=27 format=2]

[ext_resource path="res://hpsimplifiedhans-light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ReturnButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/TestQuickFire.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.47451, 0.517647, 0.658824, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.278431, 0.298039, 0.380392, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.298039, 0.337255, 0.447059, 1 )

[sub_resource type="DynamicFont" id=6]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.282353, 0.282353, 0.317647, 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.305882, 0.470588, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.443137, 0.709804, 0.407843, 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.513726, 0.227451, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.580392, 0.317647, 0.317647, 1 )

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.188235, 0.168627, 0.282353, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.188235, 0.168627, 0.282353, 1 )

[sub_resource type="DynamicFont" id=18]
extra_spacing_top = 3
extra_spacing_bottom = 2
extra_spacing_char = 1
extra_spacing_space = 7
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.372549, 0.333333, 0.454902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.47451, 0.415686, 0.552941, 1 )

[sub_resource type="DynamicFont" id=20]
size = 17
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.372549, 0.392157, 0.576471, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.501961, 0.478431, 0.588235, 1 )

[sub_resource type="DynamicFont" id=23]
size = 30
font_data = ExtResource( 1 )

[node name="TestQuickFire" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1023.0
margin_bottom = 605.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="NinePatchRect" parent="."]
margin_right = 1023.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( -212.394, 41.5693 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revision" type="Label" parent="UI"]
margin_left = 150.0
margin_top = 16.5232
margin_right = 444.0
margin_bottom = 53.5232
custom_fonts/font = SubResource( 2 )
text = "CHARACTER REVISION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction" type="Label" parent="UI"]
margin_left = 55.3126
margin_top = 107.774
margin_right = 416.313
margin_bottom = 136.774
size_flags_horizontal = 7
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Write down the meaning/character"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Label" parent="UI"]
margin_left = 147.517
margin_top = 154.728
margin_right = 326.517
margin_bottom = 290.728
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "æ—¥"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Meanings" type="Label" parent="UI"]
margin_left = 66.6395
margin_top = 311.84
margin_right = 416.64
margin_bottom = 430.84
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "aaaaa"
autowrap = true

[node name="IsCorrect" type="VBoxContainer" parent="UI"]
margin_left = 618.424
margin_top = 209.83
margin_right = 924.424
margin_bottom = 371.83
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct" type="Button" parent="UI/IsCorrect"]
margin_right = 306.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "I got it correct!"

[node name="Wrong" type="Button" parent="UI/IsCorrect"]
margin_top = 82.0
margin_right = 306.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 11 )
text = "I got it wrong..."

[node name="DidYouGetItRight" type="Label" parent="UI"]
margin_left = 665.304
margin_top = 166.117
margin_right = 863.304
margin_bottom = 195.117
custom_fonts/font = SubResource( 14 )
text = "Did you get it right?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reveal" type="Button" parent="UI"]
margin_left = 697.211
margin_top = 93.4949
margin_right = 821.211
margin_bottom = 145.495
custom_fonts/font = SubResource( 15 )
text = "Reveal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsNew" type="Label" parent="UI"]
margin_left = 55.3126
margin_top = 53.5232
margin_right = 103.313
margin_bottom = 81.5232
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.937255, 1, 0.188235, 1 )
text = "NEW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pronunciations" type="Label" parent="UI"]
margin_left = 204.123
margin_top = 459.046
margin_right = 504.123
margin_bottom = 579.046
rect_min_size = Vector2( 300, 120 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
text = "TEXT TEXT TEXT TEXT TEXT TEXT"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Examples" type="Label" parent="UI"]
margin_left = 517.0
margin_top = 405.0
margin_right = 997.0
margin_bottom = 586.0
rect_min_size = Vector2( 350, 140 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
text = "TEXT TEXT TEXT TEXT TEXT TEXT"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlternateReadings" type="Label" parent="UI"]
margin_left = 66.6395
margin_top = 180.026
margin_right = 128.64
margin_bottom = 221.026
custom_fonts/font = SubResource( 21 )
text = "Alternate
Readings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlternateReadingsLetter" type="Label" parent="UI"]
margin_left = 74.4175
margin_top = 235.888
margin_right = 124.418
margin_bottom = 285.888
rect_min_size = Vector2( 50, 50 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
text = "a"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LookAlikeCharacters" type="Label" parent="UI"]
margin_left = 340.101
margin_top = 165.177
margin_right = 477.101
margin_bottom = 206.177
custom_fonts/font = SubResource( 21 )
text = "Do not confuse with:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LookAlikeCharactersList" type="Label" parent="UI"]
margin_left = 340.101
margin_top = 194.177
margin_right = 540.101
margin_bottom = 294.177
rect_min_size = Vector2( 50, 50 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
text = "a"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" parent="." instance=ExtResource( 2 )]

[connection signal="button_down" from="UI/IsCorrect/Correct" to="." method="_on_Correct_button_down"]
[connection signal="button_down" from="UI/IsCorrect/Wrong" to="." method="_on_Wrong_button_down"]
[connection signal="button_down" from="UI/Reveal" to="." method="_on_Reveal_button_down"]
[connection signal="button_down" from="ReturnButton" to="." method="_on_ReturnButton_button_down"]
